06 Jun 2009 (svn.debian.org/tux4kids - revision 1013)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Paths - added support for localstatedir (shared modifiable data, generally
          located under /var) and sysconfdir (program-wide settings, generally located
          under /etc) to autotools build system.  Also updated the game_option_type struct
          to have a field for the shared modifiable data - var_data_path.  This is the
          intended location for shared custom word lists, high scores, and so forth.

23 Mar 2009 (svn.debian.org/tux4kids - revision 945)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Code organization - TransWipe() and all of the blitting queue functions
          moved from playgame.c into SDL_extras.c/.h. Some safety checks and other
          cleanup added along the way.

03 Mar 2009 (svn.debian.org/tux4kids - revision 932)
Version 1.7.4
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Build - configure.ac updated to only link to SDL_ttf when SDL_Pango is
          unavailable; also added configure option "--without-sdlpango" to facilitate
          testing of program when SDL_ttf is used.

03 Mar 2009 (svn.debian.org/tux4kids - revision 923)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Text drawing - encapsulation of all calls to SDL_ttf and SDL_Pango to 
          within SDL_extras.c/.h.  The rest of the program no longer "knows" which
          text library is being used.  Now, since SDL_ttf is no longer used at all
          whenever SDL_Pango is available, we don't need any specific fonts for Linux.

22 Feb 2009 svn revision 903
[ David Bruce <davidstuartbruce@gmail.com> ]
        - lots of general code cleanup to eliminate most of the compiler warnings, 
          including removal of remaining incorrect uses of "unsigned char".
        - addition of "make dist_with_fonts_bzip2" target to help support OpenSUSE
          build service integration.