@@ -1,5 +1,5 @@
 <script title="Test Lesson" bgcolor="#3f4f1f">
-   <page title="Introduction to Eample Lesson">
+   <page title="Introduction to Example Lesson">
    <text align="center">The Lesson that follows is only an example</text>
    <text align="center">lesson to help you to see how to write lessons.</text>
    <text align="center">To start writing your own lessons, edit the file,</text>
