@@ -1,3 +1,8 @@
+08 Jun 2009 (svn.debian.org/tux4kids - revision 1017)
+[ David Bruce <davidstuartbruce@gmail.com> ]
+        - Scripting - fix of bug in scripting.c run_script() where font size left
+          at zero.
+
 06 Jun 2009 (svn.debian.org/tux4kids - revision 1013)
 [ David Bruce <davidstuartbruce@gmail.com> ]
         - Paths - added support for localstatedir (shared modifiable data, generally
